--- a/BookEcommerce_ASP.NETCore MVC/Views/Product/Checkout.cshtml
+++ b/BookEcommerce_ASP.NETCore MVC/Views/Product/Checkout.cshtml
@@ -9,14 +9,19 @@
  <!-- Checkout Start -->
         <div class="checkout">
             <div class="container-fluid"> 
-                  <form asp-action="Checkout" asp-controller="Product">
+                 <form asp-action="Checkout" asp-controller="Product">
                 <div class="row">
+                     
                     <div class="col-lg-8">
                         <div class="checkout-inner">
                             <div class="billing-address">
                                 <h2>Thông Tin Thanh Toán</h2>
                                 <div class="row">
-                                    <div class="col-md-12">
+                                     <div class="col-md-6">
+                                        <label asp-for="Username">Username: </label>
+                                        <input asp-for="Username" class="form-control" value="@ViewBag.Username">
+                                    </div>
+                                    <div class="col-md-6">
                                         <label asp-for="PaymentId">Chọn Hình Thức Thanh Toán: </label>
                                         <input asp-for="PaymentId"class="form-control" type="number" placeholder="number">
                                     </div>
@@ -33,6 +38,9 @@
                             </div>
                         </div>
                     </div>
+                    
+                    </div>
+                     
                     <div class="col-lg-4">
                         <div class="checkout-inner">
                             <div class="checkout-payment">
@@ -47,18 +55,15 @@
                                                 </div>                  
                                             </div>
                                         }
-                        
-                                   
                                 </div>
                                 <div class="checkout-btn">
                                     <button>Đặt Hàng</button>
                                 </div>
                             </div>
                         </div>
-                    </div>
                 </div>
 
-                </form>
+              </form>
             </div>
         </div>
         <!-- Checkout End -->
