--- a/BookEcommerce_ASP.NETCore MVC/Views/User/Login.cshtml
+++ b/BookEcommerce_ASP.NETCore MVC/Views/User/Login.cshtml
@@ -30,13 +30,14 @@
                                     </div>
                                 <div class="col-md-12">
                                     <div class="custom-control custom-checkbox">
-                                        <input type="checkbox" class="custom-control-input" id="newaccount">
-                                        <label class="custom-control-label" for="newaccount">Keep me signed in</label>
+                                        <label asp-for = "RememberMe"></label> 
+                                        <input asp-for = "RememberMe" /> 
+                                        <span asp-validation-for = "RememberMe"></span>
                                     </div>
                                 </div>
                              
                                 <div class="col-md-12">
-                                    <button type="submit" class="btn">Submit</button>
+                                    <button type="submit" class="btn">Login</button>
                                 </div>
                             </div>
                           </form>
@@ -48,5 +49,4 @@
         @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
-
 
