doi giao dien va add search

--- a/BookEcommerce_ASP.NETCore MVC/Views/Home/ProductDetail.cshtml
+++ b/BookEcommerce_ASP.NETCore MVC/Views/Home/ProductDetail.cshtml
@@ -183,7 +183,7 @@
                         </div>
                         
                         <div class="sidebar-widget brands">
-                            <h2 class="title">Nhà Xuất Bản</h2>
+                            <h2 class="title">Tác Giả</h2>
                             <ul>
                                  @foreach(var item in auservice.getAllAuthor() as List<ClassLibrary_RepositoryDLL.Entities.Author>)
                                 {
