--- a/BookEcommerce_ASP.NETCore MVC/Views/Home/Index.cshtml
+++ b/BookEcommerce_ASP.NETCore MVC/Views/Home/Index.cshtml
@@ -50,37 +50,41 @@
                     <div class="col-lg-3 col-md-6 feature-col">
                         <div class="feature-content">
                             <i class="fab fa-cc-mastercard"></i>
-                            <h2>Secure Payment</h2>
-                            <p>
+                            <h2>Thanh Toán</h2>
+                            <h2>An Toàn</h2>
+                           @* <p>
                                 Lorem ipsum dolor sit amet consectetur elit
-                            </p>
+                            </p>*@
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 feature-col">
                         <div class="feature-content">
                             <i class="fa fa-truck"></i>
-                            <h2>Worldwide Delivery</h2>
-                            <p>
+                            <h2>Vận Chuyển</h2>
+                            <h2>Toàn Cầu</h2>
+                          @*  <p>
                                 Lorem ipsum dolor sit amet consectetur elit
-                            </p>
+                            </p>*@
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 feature-col">
                         <div class="feature-content">
                             <i class="fa fa-sync-alt"></i>
-                            <h2>90 Days Return</h2>
-                            <p>
+                            <h2>Đổi Trả Trong</h2>
+                            <h2>90 Ngày</h2>
+                           @* <p>
                                 Lorem ipsum dolor sit amet consectetur elit
-                            </p>
+                            </p>*@
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 feature-col">
                         <div class="feature-content">
                             <i class="fa fa-comments"></i>
-                            <h2>24/7 Support</h2>
-                            <p>
+                            <h2>Luôn Hỗ Trợ</h2>
+                            <h2>24/24</h2>
+                          @*  <p>
                                 Lorem ipsum dolor sit amet consectetur elit
-                            </p>
+                            </p>*@
                         </div>
                     </div>
                 </div>
