--- a/BookEcommerce_ASP.NETCore MVC/wwwroot/css/style.css
+++ b/BookEcommerce_ASP.NETCore MVC/wwwroot/css/style.css
@@ -445,7 +445,6 @@ h2 {
 
 .header .navbar-nav {
     width: 100%;
-    padding: 15px 0;
 }
 
 .header .navbar li {
@@ -678,7 +677,7 @@ h2 {
     position: relative;
     width: 100%;
     height: 100%;
-    padding: 30px 15px;
+    padding: 30px 20px;
     text-align: center;
     background: #ffffff;
 }
@@ -710,10 +709,12 @@ h2 {
 }
 
 .product-item .product-title {
-    padding: 15px;
+    padding: 18px;
     text-align: center;
     background: #000000;
     transition: all .3s;
+    height: 110px;
+  
 }
 
 .product-item:hover .product-title {
@@ -866,7 +867,6 @@ h2 {
 /**********************************/
 .featured-product {
     position: relative;
-    padding: 30px 0;
 }
 
 .recent-product {
@@ -943,11 +943,12 @@ h2 {
 }
 
 
-.product-view .product-view-top {
-    padding: 30px;
-    margin-bottom: 30px;
-    background: #ffffff;
-}
+    .product-view .product-view-top {
+        padding: 30px;
+        margin-bottom: 30px;
+        background: #53CEF8;
+        color: #ffff
+    }
 
 .product-view .product-search {
     position: relative;
